--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ dist: trusty
 rvm:
   - 2.0.0-p648
   - 2.1.10
-  - 2.2.7
-  - 2.3.4
-  - 2.4.1
+  - 2.2.8
+  - 2.3.5
+  - 2.4.2
+  - jruby-9.1.9.0
 
 after_script:
   - bundle exec codeclimate-test-reporter
